      line.
    * For years now skipcheck() has been returning a different
      value than what was documented.
    - Partially reversing Ken's "speed up ExtUtils::Manifest" patch
      from 5.51_01 so MANIFEST overrides MANIFEST.SKIP.
    * Fixed PREFIXification so it works on Win32.
    * Fixed PREFIXification so it works on VMS.
    - Fixed INSTALLMAN*DIR=none on VMS.

    [[ Test Changes ]]
    - Shortening directory levels to accomodate old VMS's
    - was using a slightly wrong prefix for the prefix tests

    [[ Doc Fixes ]]
    - Documenting VERBINST

5.90_01 Thu Apr 11 01:11:54 EDT 2002
    [[ API Changes ]]
    * Implementation of the new PREFIX logic.
    * Added new INSTALL targets:
        INSTALLSITEBIN
        INSTALLSITEMAN1DIR   INSTALLSITEMAN3DIR 
        INSTALLVENDORMAN1DIR INSTALLVENDORMAN3DIR
        INSTALLVENDORBIN INSTALLVENDORLIB INSTALLVENDORARCH
        SITEPREFIX VENDORPREFIX
    * INSTALLDIRS=site now properly using $Config{siteprefixexp}
      (Thieved from Debian.  Thanks!)
    * Added INSTALLDIRS=vendor & support for vendor directories
      (Thieved from Debian.  Thanks!)

    [[ Bug Fixes ]]
    - nmake syntax nits from Mattia Barbon
    - ExtUtils::Packlist fix for files with spaces in them from Jan Dubois
      (bleadperl@15800)
    - Old, old, old dmake bug in MM_Win32->pm_to_blib fixed by Nick
      (bleadperl 15847)

    [[ Internals ]]
    - Purging leftover PDP compiler flags.

5.55_03 Sat Apr  6 21:57:01 EST 2002
    - Reversing "fix" for RT 444.  It wasn't really fixed and it
      caused havoc with Compress::Zlib and Tk.

5.55_02 Sat Apr  6 03:09:15 EST 2002
    [[ Bug Fixes ]]
    - Craig Berry fixed install on VMS (again, I munged the last patch)
    - MakeMaker might not be recognizing it's in PERL_SRC on Win32.
      Made safer.
    - For some reason MM_VMS was using $Config{arch} instead of
      $Config{archname}
    - Fix (well, hack) for creating ABSPERL on VMS.