@@ -51,7 +51,7 @@ sub init_others
  
  # Additional import file specified from Makefile.pl
  if($self->{'base_import'}) {
-	$self->{'BASE_IMPORT'} .= ',' . $self->{'base_import'};
+	$self->{'BASE_IMPORT'} .= ', ' . $self->{'base_import'};
  }
  
  $self->{'NLM_VERSION'} = $Config{'nlm_version'};
@@ -66,14 +66,13 @@ Initializes lots of constants and .SUFFIXES and .PHONY
 
 =cut
 
-# NetWare override
 sub const_cccmd {
     my($self,$libperl)=@_;
     return $self->{CONST_CCCMD} if $self->{CONST_CCCMD};
     return '' unless $self->needs_linking();
     return $self->{CONST_CCCMD} =
-	q{CCCMD = $(CC) $(INC) $(CCFLAGS) $(OPTIMIZE) \\
-	$(PERLTYPE) $(MPOLLUTE) \\
+	q{CCCMD = $(CC) $(CCFLAGS) $(INC) $(OPTIMIZE) \\
+	$(PERLTYPE) $(MPOLLUTE) -o $@ \\
 	-DVERSION="$(VERSION)" -DXS_VERSION="$(XS_VERSION)"};
 }
 
@@ -94,25 +93,25 @@ sub constants {
 	      PERL_ARCHLIB SITELIBEXP SITEARCHEXP LIBPERL_A MYEXTLIB
 	      FIRST_MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
 	      PERL_INC PERL FULLPERL LIBPTH BASE_IMPORT PERLRUN
-          FULLPERLRUN PERLRUNINST FULLPERLRUNINST
-          FULL_AR PERL_CORE NLM_VERSION MPKTOOL TOOLPATH
+              FULLPERLRUN PERLRUNINST FULLPERLRUNINST
+              FULL_AR PERL_CORE NLM_VERSION MPKTOOL TOOLPATH
 
 	      / ) {
 	next unless defined $self->{$tmp};
 	push @m, "$tmp = $self->{$tmp}\n";
     }
 
-	(my $boot = $self->{'NAME'}) =~ s/:/_/g;
-	$self->{'BOOT_SYMBOL'}=$boot;
-	push @m, "BOOT_SYMBOL = $self->{'BOOT_SYMBOL'}\n";
+    (my $boot = $self->{'NAME'}) =~ s/:/_/g;
+    $self->{'BOOT_SYMBOL'}=$boot;
+    push @m, "BOOT_SYMBOL = $self->{'BOOT_SYMBOL'}\n";
 
-	# If the final binary name is greater than 8 chars,
-	# truncate it here and rename it after creation
-	# otherwise, Watcom Linker fails
-	if(length($self->{'BASEEXT'}) > 8) {
-		$self->{'NLM_SHORT_NAME'} = substr($self->{'NAME'},0,8);
-		push @m, "NLM_SHORT_NAME = $self->{'NLM_SHORT_NAME'}\n";
-	}
+    # If the final binary name is greater than 8 chars,
+    # truncate it here and rename it after creation
+    # otherwise, Watcom Linker fails
+    if(length($self->{'BASEEXT'}) > 8) {
+        $self->{'NLM_SHORT_NAME'} = substr($self->{'BASEEXT'},0,8);
+        push @m, "NLM_SHORT_NAME = $self->{'NLM_SHORT_NAME'}\n";
+    }
 
     push @m, qq{
 VERSION_MACRO = VERSION
@@ -121,22 +120,17 @@ XS_VERSION_MACRO = XS_VERSION
 XS_DEFINE_VERSION = -D\$(XS_VERSION_MACRO)=\\\"\$(XS_VERSION)\\\"
 };
 
-	# Get the include path and replace the spaces with ;
-	# Copy this to makefile as INCLUDE = d:\...;d:\;
-	(my $inc = $Config{'incpath'}) =~ s/ /;/g;
+    # Get the include path and replace the spaces with ;
+    # Copy this to makefile as INCLUDE = d:\...;d:\;
+    (my $inc = $Config{'incpath'}) =~ s/([ ]*)-I/;/g;
 
-	# Get the additional include path and append to INCLUDE, keep it in
-	# INC will give problems during compilation, hence reset it after getting
-	# the value
-	(my $add_inc = $self->{'INC'}) =~ s/ -I/;/g;
-	$self->{'INC'} = '';
- 	push @m, qq{
-INCLUDE = $inc;$add_inc;
+    push @m, qq{
+INCLUDE = $inc;
 };
 
-	# Set the path to Watcom binaries which might not have been set in
-	# any other place
-	push @m, qq{
+    # Set the path to CodeWarrior binaries which might not have been set in
+    # any other place
+    push @m, qq{
 PATH = \$(PATH);\$(TOOLPATH)
 };
 
@@ -261,7 +255,7 @@ Defines how to produce the *.so (or equivalent) files.
 =cut
 
 sub dynamic_lib {
-	my($self, %attribs) = @_;
+    my($self, %attribs) = @_;
     return '' unless $self->needs_linking(); #might be because of a subdir
 
     return '' unless $self->has_link_code;
@@ -270,8 +264,8 @@ sub dynamic_lib {
     my($inst_dynamic_dep) = $attribs{INST_DYNAMIC_DEP} || "";
     my($ldfrom) = '$(LDFROM)';
     my(@m);
-	(my $boot = $self->{NAME}) =~ s/:/_/g;
-	my ($mpk);
+    (my $boot = $self->{NAME}) =~ s/:/_/g;
+
     push(@m,'
 # This section creates the dynamically loadable $(INST_DYNAMIC)
 # from $(OBJECT) and possibly $(MYEXTLIB).
@@ -280,72 +274,71 @@ INST_DYNAMIC_DEP = '.$inst_dynamic_dep.'
 
 $(INST_DYNAMIC): $(OBJECT) $(MYEXTLIB) $(BOOTSTRAP)
 ');
-#      push(@m,
-#      q{	$(LD) -out:$@ $(LDDLFLAGS) }.$ldfrom.q{ $(OTHERLDFLAGS) }
-#      .q{$(MYEXTLIB) $(PERL_ARCHIVE) $(LDLOADLIBS) -def:$(EXPORT_LIST)});
 
-		# Create xdc data for an MT safe NLM in case of mpk build
-		if ( $self->{CCFLAGS} =~ m/ -DMPK_ON /) {
-			$mpk=1;
-			push @m, ' $(MPKTOOL) $(BASEEXT).xdc
-';
-		} else {
-			$mpk=0;
-		}
+    my ($mpk);
+    # Create xdc data for an MT safe NLM in case of mpk build
+    push(@m,
+         q{@echo Export boot_$(BOOT_SYMBOL) > $(BASEEXT).def
+    });
+    push(@m,
+         q{@echo $(BASE_IMPORT) >> $(BASEEXT).def
+    });
+    push(@m,
+         q{@echo Import @$(PERL_INC)\perl.imp >> $(BASEEXT).def
+    }); 
 
-		push(@m,
-			q{ $(LD) Form Novell NLM '$(DISTNAME) Extension, XS_VERSION=$(XS_VERSION)'} 
-			);
 
-		# Taking care of long names like FileHandle, ByteLoader, SDBM_File etc
-		if($self->{NLM_SHORT_NAME}) {
-			# In case of nlms with names exceeding 8 chars, build nlm in the 
-			# current dir, rename and move to auto\lib.  If we create in auto\lib
-			# in the first place, we can't rename afterwards.
-			push(@m,
-				q{ Name $(NLM_SHORT_NAME).$(DLEXT)}
-				);
-		} else {
-			push(@m,
-				q{ Name $(INST_AUTODIR)\\$(BASEEXT).$(DLEXT)}
-				);
-		}
+    if ( $self->{CCFLAGS} =~ m/ -DMPK_ON /) {
+        $mpk=1;
+        push @m, qq{\t\$(MPKTOOL) \$(XDCFLAGS) \$(BASEEXT).xdc\n},
+                 qq{\t\@echo xdcdata $(BASEEXT).xdc >> $(BASEEXT).def\n};
+    } else {
+        $mpk=0;
+    }
 
-		push(@m,
-		   q{ Option Quiet Option Version = $(NLM_VERSION) Option Caseexact Option NoDefaultLibs Option screenname 'none' Option Synchronize }
-		   );
+    push(@m,
+         q{$(LD) $(LDFLAGS) $(OBJECT:.obj=.obj) }
+    );
 
-		if ($mpk) {
-		push (@m, 
-		q{ Option XDCDATA=$(BASEEXT).xdc }
-		);
-		}
+    push(@m,
+         qq{\t-desc "Perl 5.7.3 Extension (\$(BASEEXT))  XS_VERSION: \$(XS_VERSION)" -nlmversion \$(NLM_VERSION) }
+    );
 
-		# Add additional lib files if any (SDBM_File)
-		if($self->{MYEXTLIB}) {
-			push(@m,
-				q{ Library $(MYEXTLIB) }
-				);
-		}
+    # Taking care of long names like FileHandle, ByteLoader, SDBM_File etc
+    if($self->{NLM_SHORT_NAME}) {
+        # In case of nlms with names exceeding 8 chars, build nlm in the 
+        # current dir, rename and move to auto\lib.  If we create in auto\lib
+        # in the first place, we can't rename afterwards.
+        push(@m,
+             q{ -o $(NLM_SHORT_NAME).$(DLEXT)}
+        );
+    } else {
+        push(@m,
+             q{ -o $(INST_AUTODIR)\\$(BASEEXT).$(DLEXT)}
+        );
+    }
 
-#For now lets comment all the Watcom lib calls
-#q{ LibPath $(LIBPTH) Library plib3s.lib Library math3s.lib Library clib3s.lib Library emu387.lib Library $(PERL_ARCHIVE) Library $(PERL_INC)\Main.lib}
+    # Add additional lib files if any (SDBM_File)
+    if($self->{MYEXTLIB}) {
+        push(@m,
+             q{ $(MYEXTLIB) }
+        );
+    }
 
-		push(@m,
-				q{ Library $(PERL_ARCHIVE) Library $(PERL_INC)\Main.lib}			   
-			   .q{ Export boot_$(BOOT_SYMBOL) $(BASE_IMPORT) }
-			   .q{ FILE $(OBJECT:.obj=,)}
-			);
+    push(@m,
+         q{ $(PERL_INC)\Main.lib}.
+         q{ -commandfile $(BASEEXT).def }
+         );
 
-		# If it is having a short name, rename it 
-		if($self->{NLM_SHORT_NAME}) {
-			push @m, '
+    # If it is having a short name, rename it 
+    if($self->{NLM_SHORT_NAME}) {
+        push @m, '
  if exist $(INST_AUTODIR)\\$(BASEEXT).$(DLEXT) del $(INST_AUTODIR)\\$(BASEEXT).$(DLEXT)';
-			push @m, '
+        push @m, '
  rename $(NLM_SHORT_NAME).$(DLEXT) $(BASEEXT).$(DLEXT)';
-			push @m, '
+        push @m, '
  move $(BASEEXT).$(DLEXT) $(INST_AUTODIR)';
-		}
+    }
 
     push @m, '
 	$(CHMOD) 755 $@
